force-app/main/default/objects/Order_Item_Price_Adjustment__c/Order_Item_Price_Adjustment__c.object-meta.xml
<CustomObject>
    <label>Order Item Price Adjustment</label>
    <nameField>
        <displayFormat>Adjustment-{0}</displayFormat>
        <label>Order Item Price Adjustment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Item Price Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>