force-app/main/default/objects/Order_Item_Price_Adjustment__c/fields/New_Price__c.field-meta.xml
<CustomField>
    <fullName>New_Price__c</fullName>
    <label>New Price</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>