force-app/main/default/objects/Order_Item_Price_Adjustment__c/fields/Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Item__c</fullName>
    <label>Order Item</label>
    <referenceTo>Order_Item__c</referenceTo>
    <relationshipLabel>Order Item Price Adjustments</relationshipLabel>
    <relationshipName>Order_Item_Price_Adjustments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>