force-app/main/default/objects/Order_Item_Price_Adjustment__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <length>32</length>
    <type>Text</type>
</CustomField>